--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "node-red-contrib-tplink-tapo-connect-api",
-  "version": "0.3.5",
-  "description": "Unofficial node-RED node for connecting to TP-Link Tapo devices. Currently limited to the P100 & P105 & P110 smart plugs and L510E smart bulbs.",
-  "author": "sanlike",
+  "name": "node-red-contrib-tapo-new-api",
+  "version": "0.3.6",
+  "description": "Unofficial node-RED node for connecting to TP-Link Tapo devices with new API. Currently limited to the P100 & P105 & P110 smart plugs and L510E smart bulbs.",
+  "author": "mbserran",
   "license": "Apache",
   "keywords": [
     "node-red",
@@ -11,7 +11,9 @@
     "p105",
     "p110",
     "p115",
-    "L510E"
+    "L510E",
+    "klap",
+    "passthrough"
   ],
   "main": "none",
   "scripts": {
@@ -33,14 +35,7 @@
   "node-red": {
     "version": ">=2.0.0",
     "nodes": {
-      "tplink_tapo_connect_api": "nodes/tplink_tapo_connect_api.js",
-      "tplink_command": "nodes/tplink_command.js",
-      "tplink_brightness": "nodes/tplink_brightness.js",
-      "tplink_colour": "nodes/tplink_colour.js",
-      "tplink_status": "nodes/tplink_status.js",
-      "tplink_toggle": "nodes/tplink_toggle.js",
-      "tplink_turn_off": "nodes/tplink_turn_off.js",
-      "tplink_turn_on": "nodes/tplink_turn_on.js"
+      "tapo_actions": "nodes/tapo_actions.js"
     }
   },
   "engines": {
@@ -49,29 +44,29 @@
   "dependencies": {
     "ansi-styles": "^6.1.0",
     "arpping": "^4.0.0",
-    "local-devices": "^3.2.0",
     "axios": "^0.27.2",
+    "local-devices": "^3.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node-red": "^1.2.1",
     "cpx": "^1.5.0",
-    "node-red": "^3.0.2",
+    "dotenv": "^16.0.1",
+    "mocha": "^10.0.0",
+    "node-red": "^3.1.3",
     "node-red-node-test-helper": "^0.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4",
-    "mocha": "^10.0.0",
-    "dotenv": "^16.0.1"
+    "typescript": "^4.7.4"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sanlike0911/node-red-contrib-tplink-tapo-connect-api.git"
+    "url": "git+https://github.com/mbserran/node-red-contrib-tapo-new-api.git"
   },
   "bugs": {
-    "url": "https://github.com/sanlike0911/node-red-contrib-tplink-tapo-connect-api/issues"
+    "url": "https://github.com/mbserran/node-red-contrib-tapo-new-api/issues"
   },
-  "homepage": "https://github.com/sanlike0911/node-red-contrib-tplink-tapo-connect-api#readme"
+  "homepage": "https://github.com/mbserran/node-red-contrib-tapo-new-api#readme"
 }
