--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-tapo-new-api",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "description": "Unofficial node-RED node for connecting to TP-Link Tapo devices with new API. Currently limited to the P100 & P105 & P110 smart plugs and L510E smart bulbs.",
   "author": "mbserran",
   "license": "Apache",
@@ -44,6 +44,7 @@
   "dependencies": {
     "ansi-styles": "^6.1.0",
     "arpping": "^4.0.0",
+    "util": "^0.12.5",
     "axios": "^0.27.2",
     "local-devices": "^3.2.0",
     "uuid": "^8.3.2"
