--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-tapo-new-api",
-  "version": "0.4.0",
+  "version": "0.4.5",
   "description": "Unofficial node-RED node for connecting to TP-Link Tapo devices with new API. Currently limited to the P100 & P105 & P110 smart plugs and L510E smart bulbs.",
   "author": "mbserran",
   "license": "Apache",
@@ -39,18 +39,16 @@
     }
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=15.0.0"
   },
   "dependencies": {
-    "ansi-styles": "^6.1.0",
-    "arpping": "^4.0.0",
-    "util": "^0.12.5",
-    "axios": "^0.27.2",
-    "local-devices": "^3.2.0",
-    "uuid": "^8.3.2"
+    "axios": "^1.6.5",
+    "local-devices": ">=1.1.1",
+    "uuid": ">=8.3.2"
   },
   "devDependencies": {
     "@types/node-red": "^1.2.1",
+    "@types/uuid": "^9.0.7",
     "cpx": "^1.5.0",
     "dotenv": "^16.0.1",
     "mocha": "^10.0.0",
